--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body{
-    height: 100vh;
-    background-size: cover;
-    background-image: url(https://static.vecteezy.com/system/resources/previews/013/151/036/non_2x/light-blue-pink-orange-and-purple-gradient-background-vector.jpg);
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(218deg, rgba(98,216,249,1) 0%, rgba(166,29,253,1) 48%, rgba(252,176,69,1) 100%);
 }
 
 .center {
@@ -28,7 +31,7 @@ body{
 
 .card-img {
     height: 35rem;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .btn {
